# trecs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
ecs/: Cargo.toml
ecs/src/: lib.rs
ecs/src/component/: bundle.rs  entity.rs
ecs/src/scheduler/: access.rs  caches.rs  command.rs  fetch.rs  iter.rs  mod.rs  query.rs  resources.rs  system.rs
ecs/src/world/: chunk.rs  mod.rs  traits.rs  tree.rs
proc/: Cargo.toml
proc/src/: lib.rs
src/: lib.rs
src/component/: bundle.rs  mod.rs
src/scheduler/: fetch.rs  mod.rs  system.rs
src/world/: chunk.rs  mod.rs
tecs/: Cargo.toml
tecs-proc/: Cargo.toml
tecs-proc/src/: lib.rs
tecs/examples/: commands.rs  resources.rs  system.rs
tecs/src/: lib.rs  world.rs
tecs/src/bundle/: component.rs  meta.rs  mod.rs
tecs/src/iter/: ebundle.rs  iter.rs  mod.rs
tecs/src/storage/: iter.rs  mod.rs
tecs/src/system/: mod.rs  state.rs
tecs/src/system/fnsys/: commands.rs  mod.rs  query.rs  resources.rs
tecs/src/tools/: fetch.rs  filter.rs
tecs/src/traits/: command.rs  fetch.rs  filter.rs  mod.rs  resources.rs
tecs/src/world/: commands.rs  mod.rs  query.rs  resources.rs
trecs/: Cargo.toml
trecs/examples/: commands.rs  resources.rs  system.rs
trecs/src/bundle/: component.rs  meta.rs  mod.rs
trecs/src/iter/: ebundle.rs
trecs/src/storage/: entity.rs  iter.rs  mod.rs
trecs/src/system/: mod.rs
trecs/src/tools/: command.rs  fetch.rs  filter.rs  mod.rs
trecs/src/world/: commands.rs  mod.rs  query.rs
