[package]
name = "trecs_proc"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
description = "proc_macros"
repository = "https://github.com/twhice/tecs"
workspace = ".."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies.syn]
version = "2.0.18"
features = ["full"]

[features]
default = []
system = []
