[package]
name = "trecs"
version = "0.1.2"
edition = "2021"
license-file = "../LICENSE"
description = "a tiny and easy to use ecs library"
repository = "https://github.com/twhice/trecs"
keywords = ["gamedev", "ecs"]
workspace = ".."
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
trecs_proc = "0.1.0"

[features]
default = ["system"]
system = []
async = []
